// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin supports "automatic" runtime 1`] = `
"const SvgComponent = (props)=><svg viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink">

    <title>Dismiss</title>

    <desc>Created with Sketch.</desc>

    <defs></defs>

    <g id="Blocks" stroke="none" strokeWidth="1" fill="none" fillRule="evenodd" strokeLinecap="square">

        <g id="Dismiss" stroke="#063855" strokeWidth="2">

            <path d="M51,37 L37,51" id="Shape"></path>

            <path d="M51,51 L37,37" id="Shape"></path>

        </g>

    </g>

</svg>;
export default SvgComponent;
"
`;

exports[`plugin supports "preact" preset 1`] = `
"import { h } from "preact";
const SvgComponent = (props)=><svg viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink">

    <title>Dismiss</title>

    <desc>Created with Sketch.</desc>

    <defs></defs>

    <g id="Blocks" stroke="none" strokeWidth="1" fill="none" fillRule="evenodd" strokeLinecap="square">

        <g id="Dismiss" stroke="#063855" strokeWidth="2">

            <path d="M51,37 L37,51" id="Shape"></path>

            <path d="M51,51 L37,37" id="Shape"></path>

        </g>

    </g>

</svg>;
export default SvgComponent;
"
`;

exports[`plugin transforms code 1`] = `
"import * as React from "react";
const SvgComponent = (props)=><svg viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink">

    <title>Dismiss</title>

    <desc>Created with Sketch.</desc>

    <defs></defs>

    <g id="Blocks" stroke="none" strokeWidth="1" fill="none" fillRule="evenodd" strokeLinecap="square">

        <g id="Dismiss" stroke="#063855" strokeWidth="2">

            <path d="M51,37 L37,51" id="Shape"></path>

            <path d="M51,51 L37,37" id="Shape"></path>

        </g>

    </g>

</svg>;
export default SvgComponent;
"
`;
